plugins {
    id 'java'
    id 'application'
}

sourceCompatibility = JavaVersion.VERSION_1_8
mainClassName = 'com.walker.devolayexamples.SendAudioExample'

repositories {
    mavenCentral()
}

dependencies {
    implementation project(":devolay-java")
    implementation group: 'org.bytedeco', name: 'ffmpeg-platform', version: '4.2.1-1.5.2'
    //runtimeOnly project(":devolay-natives")

    testCompile group: 'junit', name: 'junit', version: '4.12'
}

task executeSendAudioExample(type:JavaExec) {
    main = "com.walker.devolayexamples.SendAudioExample"
    classpath = sourceSets.main.runtimeClasspath
}

task executeRecvExample(type:JavaExec) {
    main = "com.walker.devolayexamples.RecvExample"
    classpath = sourceSets.main.runtimeClasspath
}

task executeSendVideoExample(type:JavaExec) {
    main = "com.walker.devolayexamples.SendVideoExample"
    classpath = sourceSets.main.runtimeClasspath
}

task executeRecordingExample(type:JavaExec) {
    main = "com.walker.devolayexamples.recording.RecordingExample"
    classpath = sourceSets.main.runtimeClasspath
}

task executeMonitorExample(type:JavaExec) {
    main = "com.walker.devolayexamples.MonitorExample"
    classpath = sourceSets.main.runtimeClasspath
}

task executeFrameSyncExample(type:JavaExec) {
    main = "com.walker.devolayexamples.FrameSyncExample"
    classpath = sourceSets.main.runtimeClasspath
}
